@startuml db

' hide the spot
' hide circle

package Enums {
  enum EnumTipoProyecto {
    CONSTRUCCION
    AMPLIACION
    REFACCION
    DEMOLICION
    DEMOLICION_Y_CONSTRUCCION
    DOCUMENTACION
  }

  enum EnumDestinoProyecto {
    UNIFAMILIAR
    MULTIFAMILIAR
    AGRUPADA
    OFICINA
    COMERCIO
    INDUSTRIA
  }

  enum EnumEstadoProyecto {
    APROBADO
    RECHAZADO
    PENDIENTE
  }

  EnumTipoProyecto -[#f000]- EnumDestinoProyecto

  EnumDestinoProyecto -[#f000]- EnumEstadoProyecto
}

class Usuario {
  id: string
  nombre: string
}

class Proyecto {
  - id: string
  - nombre?: string
  - expediente: string
  - obra: EnumTipoDeObra
  - destino: EnumDestino
  - ubicacion: string
  - otros?: Object
  - referencias?: string
  - antecedentes?: string
  - propietario
  - proyectistas
  - direccionTecnica
  - estado: EnumEstadoProyecto
}

class Organizacion {
  - id: string
  - regexExpediente: string
  - nombre: string
}

class Etiqueta {
  id: string
  valor: string
}

class Plano {
  escala: string

}

Usuario "1" - "*" Organizacion : id_propietario

Organizacion "*" - "*" Usuario : id_miembros

Organizacion "1" -- "*" Proyecto : id_organizacion

Proyecto "1" -- "*" Recurso : id_proyecto

Recurso "1" - "*" Plano : id_recurso

Proyecto "1" - "*" Etiqueta : id_proyecto

Etiqueta "*" - "*" Plano : id_proyecto

Usuario "1" -- "*" Recurso : id_creador

Usuario "1" -- "*" Plano : id_creador

@enduml
